# ood

1-strategy/: SimUDuck.sln
3-decorator/: 3-decorator.sln
4-factory/: 4-factory.sln  shapes.txt
5-command/: 5-command.sln
6-adapter/: 6-adapter.sln
8-state/: 8-state.sln
9-shapes-editor/: .gitignore  CMakeLists.txt  ShapesEditor.sln  vcpkg.json
9-shapes-editor/shapes_editor/: CMakeLists.txt  app.vcxproj  app.vcxproj.filters  imgui.ini  main.cpp
9-shapes-editor/shapes_editor/include/Command/: Command.h  CommandHistory.h  FunctionalCommand.h
9-shapes-editor/shapes_editor/include/Common/: Color.h  Point.h
9-shapes-editor/shapes_editor/include/Model/: Color.h  Defaults.h  IShape.h  IShapeComposition.h  IShapeCompositionObserver.h  IShapesPresenter.h  Point.h  Shape.h  ShapeComposition.h  ShapeStore.h  ShapeType.h  constants.h
9-shapes-editor/shapes_editor/include/Presenter/: CommandHistory.h  Editor.h  IMenuActionsHandler.h  IMouseActionsHandler.h  ResizeNode.h  Selection.h  ShapePresenter.h  ShapesPresenter.h  constants.h
9-shapes-editor/shapes_editor/include/View/: ICanvas.h  IShapePresenter.h  IView.h  MouseActionsDispatcher.h  SelectedShapeData.h
9-shapes-editor/shapes_editor/src/Command/: Command.cpp  CommandHistory.cpp  FunctionalCommand.cpp
9-shapes-editor/shapes_editor/src/Model/: Shape.cpp  ShapeComposition.cpp  ShapeStore.cpp
9-shapes-editor/shapes_editor/src/Presenter/: CommandHistory.cpp  Editor.cpp  Selection.cpp  ShapePresenter.cpp  ShapesPresenter.cpp
9-shapes-editor/shapes_editor/src/View/: MouseActionsDispatcher.cpp
(+300 files in other folders)
